# geomonitoring

./: .gitignore  CMakeLists.txt  README.md  doxy.conf  main.cpp  testdata.cpp
ICP/: CMakeLists.txt  ICP.h  run_icp.cpp
IPC/: CMakeLists.txt  IPC.h  test_ipc.cpp
Parser/: CMakeLists.txt  PlyParser.cpp  PlyParser.h  testViewer.cpp
testdata/: TestData.h
testdata/HighPointcloud/: StoneHigh1.ply  StoneHigh10.ply  StoneHigh2.ply  StoneHigh3.ply  StoneHigh4.ply  StoneHigh5.ply  StoneHigh6.ply  StoneHigh7.ply  StoneHigh8.ply  StoneHigh9.ply
testdata/LowPointcloud/: StoneLow1.ply  StoneLow10.ply  StoneLow2.ply  StoneLow3.ply  StoneLow4.ply  StoneLow5.ply  StoneLow6.ply  StoneLow7.ply  StoneLow8.ply  StoneLow9.ply
testdata/MediumPointcloud/: StoneMedium1.ply  StoneMedium10.ply  StoneMedium2.ply  StoneMedium3.ply  StoneMedium4.ply  StoneMedium5.ply  StoneMedium6.ply  StoneMedium7.ply  StoneMedium8.ply  StoneMedium9.ply
testdata/lowestPointcloud/: StoneLowest1.ply  StoneLowest10.ply  StoneLowest2.ply  StoneLowest3.ply  StoneLowest4.ply  StoneLowest5.ply  StoneLowest6.ply  StoneLowest7.ply  StoneLowest8.ply  StoneLowest9.ply
